--- a/Price_and_RSI_Model_(good).ipynb
+++ b/Price_and_RSI_Model_(good).ipynb
@@ -165,25 +165,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8CMYT4c3QCbK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# # Dataset\n",
-        "# USDX = read_csv(\"EUSTX5043200.csv\")\n",
-        "# # index Date\n",
-        "# USDX[\"Date\"]=pd.to_datetime(USDX[\"Date\"],format=\"%Y.%m.%d\")\n",
-        "# USDX = USDX.set_index(USDX[\"Date\"])\n",
-        "# USDX.drop([\"Date\",\"Open\",\"High\",\"Low\"],axis=1,inplace=True)\n",
-        "# USDX"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Dy1vgnzVLhGc",
         "colab_type": "code",
         "colab": {}
@@ -409,14 +390,8 @@
         }
       },
       "source": [
-        "# #Create a new dataframe with only the 'Close column\n",
-        "# data = dataset.filter([\"Close\"])\n",
-        "# #Create a new dataframe with only the 'RSI column\n",
-        "# RSI = dataset.filter([\"RSI\"])\n",
         "\n",
-        "# #Convert the dataframe to a numpy array\n",
-        "# price = data.values\n",
-        "# RSI = RSI.values\n",
+        "#Convert the dataframe to a numpy array\n",
         "values = dataset.values\n",
         "\n",
         "# ensure all data is float\n",
@@ -429,6 +404,7 @@
         "# frame as supervised learning\n",
         "reframed = series_to_supervised(scaled, 1, 1)\n",
         "print(reframed)\n",
+        "\n",
         "# drop columns we don't want to predict\n",
         "reframed.drop(reframed.columns[-1:], axis=1, inplace=True)\n",
         "print(reframed)\n",
